games how they should be formatted now
